--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,33 +24,33 @@ main section {
 }
 
 body {
-    background-color:#dee0e3 ;
+    background-color: #f8f9fb;
 }
 
 header {
-    background-color:#dee0e3 ;
+    background-color:#f8f9fb;
 }
 
 nav a:hover {
-    background-color:grey ;
+    background-color:grey;
 }
 
 .book, .join {
-    background-color:#e1ecf7 ;
+    background-color:#e1ecf7;
 }
 
 .book:hover, .join:hover {
-    background-color: grey ;
+    background-color: grey;
 }
 
 #background {
-    background-color: #e1ecf7 ;
+    background-color: #dcedfd;
 }
 
 .msg {
-    background-color:#5986a7 ;
+    background-color:#e1ecf7;
 }
 
 footer{
-    background-color:#5986a7 ;
+    background-color:#e1ecf7;
 }
