--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -105,7 +105,7 @@ footer p a:hover {
 
 #background {
     height: 725px;
-    background-color: #dcedfd;
+    background-color: #d3e3f1;
 }
 
 #info {
