--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -147,7 +147,7 @@ footer p a:hover {
 .card-img{
     width: 30%;
     height: 300px;
-    border: 5px color solid rgb(47, 47, 165);
+    border: 5px solid rgb(206, 206, 230);
 }
 
 .logo {
